--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -21,7 +21,7 @@ pipelines:
         type: Bash
         configuration:
           inputSteps:
-            - name: testsimplee2
+            - name: testsimplee
         execution:
           onExecute:
             - printenv
