--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -1,27 +1,21 @@
-pipelines:
-  - name: testsimpleepipe
-    
-    steps:
-      - name: testsimplee
-        type: Bash
-        execution:
-          onExecute:
-            - printenv
-            
-      - name: testsimplee2
-        type: Bash
-        configuration:
-          inputSteps:
-            - name: testsimplee
-        execution:
-          onExecute:
-            - printenv
 
-      - name: testsimplee4
-        type: Bash
-        configuration:
-          inputSteps:
-            - name: testsimplee
-        execution:
-          onExecute:
-            - printenv
+pipelines:
+  - name: jenkins_varsha
+    steps:
+
+          
+    - name: jfrog_jenkins_step1
+      type: Jenkins
+      configuration:
+        jenkinsJobName: testvarsha
+        integrations:
+          - name: S_B_Jenkins
+
+    - name: jfrog_jenkins_step2
+      type: Jenkins
+      configuration:
+        inputSteps:
+          - name: jfrog_jenkins_step1
+        jenkinsJobName: testvarsha
+        integrations:
+          - name: S_B_Jenkins
