--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -3,10 +3,19 @@ pipelines:
   - name: jenkins_varsha
     steps:
 
+
+    - name: jfrog_bash_step1
+      type: Jenkins
+      configuration:
+        jenkinsJobName: testvarsha
+        integrations:
+          - name: S_B_Jenkins
           
     - name: jfrog_jenkins_step1
       type: Jenkins
       configuration:
+        inputSteps:
+          - name: jfrog_bash_step1
         jenkinsJobName: testvarsha
         integrations:
           - name: S_B_Jenkins
@@ -15,7 +24,7 @@ pipelines:
       type: Jenkins
       configuration:
         inputSteps:
-          - name: jfrog_jenkins_step1
+          - name: jfrog_bash_step1
         jenkinsJobName: testvarsha
         integrations:
           - name: S_B_Jenkins
